--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   font_awesome_flutter: ^10.7.0
   uuid: ^4.0.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
